** It only impacts prefix patterns due to the additional context path in pattern.
** It does not impact deployment within the `ROOT` context like Spring-boot which do not have such context path prefix.


[float]
===== Features
* Improved capturing of logged exceptions when using Log4j2 - {pull}2139[#2139]

[float]
===== Bug fixes
* Fixing/reducing startup delays related to `ensureInstrumented` - {pull}2150[#2150]

[float]
===== Refactorings
* Loading the agent from an isolated class loader - {pull}2109[#2109]
* Refactorings in the `apm-agent-plugin-sdk` that may imply breaking changes for beta users of the external plugin mechanism
** `WeakMapSupplier.createMap()` is now `WeakConcurrent.buildMap()` and contains more builders. - {pull}2136[#2136]
** `GlobalThreadLocal` has been removed in favor of `DetachedThreadLocal`. To make it global, use `GlobalVariables`. - {pull}2136[#2136]
** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented`. - {pull}#2164[#2164]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.26.0]]
==== 1.26.0 - 2021/09/14

===== Potentially breaking changes
* If you rely on Database span subtype and use Microsoft SQL Server, the span subtype has been changed from `sqlserver`
to `mssql` to align with other agents.

[float]
===== Breaking changes
* Stop collecting the field `http.request.socket.encrypted` in http requests - {pull}2136[#2136]

[float]
===== Features
* Improved naming for Spring controllers - {pull}1906[#1906]
* ECS log reformatting improvements - {pull}1910[#1910]
** Automatically sets `service.node.name` in all log events if set through agent configuration
** Add `log_ecs_reformatting_additional_fields` option to support arbitrary fields in logs
** Automatically serialize markers as tags where relevant (log4j2 and logback)
* gRPC spans (client and server) can detect errors or cancellation through custom listeners - {pull}2067[#2067]